--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
     "file-saver": "^2.0.5",
     "html2pdf.js": "^0.10.3",
     "react": "^19.1.0",
+    "react-colorful": "^5.6.1",
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.6.3"
